--- a/Enviado.html
+++ b/Enviado.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
 
     <meta charset="UTF-8">
+    <link rel="icon" href="./img/fundo.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="./img/fundo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
