--- a/Enviado.html
+++ b/Enviado.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <p id="obrigado">Email enviado com sucesso!</p>
-    <a id="voltar" href=https://https://w-rlocacao-servico-2kmd-na7tyn00x-wrlocacoservicos.vercel.app/index.html">Voltar</a>
+    <a id="voltar"https://wr-locacao-servico.vercel.app/index.html">Voltar</a>
     
 </body>
 </html>
