--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <input type="hidden" name="_subject" value="Novo envio!">
         <input type="text" name="_honey" style="display: none;">
         <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_next" value="https://w-rlocacao-servico.vercel.app/Enviado.html">
+        <input type="hidden" name="_next" value="https://wr-locacao-servico.vercel.app/Enviado.html">
 
       </form>
     </section>
