--- a/Enviado.html
+++ b/Enviado.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
 
     <meta charset="UTF-8">
+    <link rel="icon" href="./img/fundo.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="./img/fundo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email enviado</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -11,7 +13,7 @@
 </head>
 <body>
     <p id="obrigado">Email enviado com sucesso!</p>
-    <a id="voltar" href="http://127.0.0.1:5500/index.html">Voltar</a>
+    <a id="voltar" href="https://wr-locacao-servico.vercel.app/index.html">Voltar</a>
     
 </body>
 </html>
