--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./img/fundo.png">
   <title>WR Locações e Serviços</title>
 </head>
 
@@ -311,7 +312,7 @@
         <input type="hidden" name="_subject" value="Novo envio!">
         <input type="text" name="_honey" style="display: none;">
         <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_next" value="https://127.0.0.1:5500/Enviado.html">
+        <input type="hidden" name="_next" value="https://wr-locacao-servico.vercel.app/Enviado.html">
 
       </form>
     </section>
