add portifólio e trocando imagens

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <a href="#galeria" class="smooth-scroll" onclick="closeNav()">Galeria</a>
           <a href="#BannerCliente" class="smooth-scroll" onclick="closeNav()">Clientes</a>
           <a href="#contato" class="smooth-scroll" onclick="closeNav()">Contato</a>
+          <a href="https://www.canva.com/design/DAFhO1ZRrMA/R0Ie37HE1AF2erU-cOFV7A/view?utm_content=DAFhO1ZRrMA&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" class="smooth-scroll" onclick="closeNav()">Portifólio</a>
           <span class="close-btn" onclick="closeNav()">&times;</span>
         </ul>
         <span class="open-btn" onclick="openNav()">&#9776;</span>
