--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+  
   <!-- header-->
   <header id="heade">
     <!--container-->
@@ -83,10 +84,11 @@
             clientes onde eles estiverem, com qualidade, comprometimento e custos adequados a seus negócios.
           </p>
         </div>
-
+       
       </div>
 
       <div class="imagemSobre">
+        <img src="./img/Galeria/guindaste.jpg" alt="">
         <a onclick="abrirModal()" class="btn" id="saibamais">Entrar em contato</a>
       </div>
 
@@ -126,7 +128,7 @@
               Calandragem de tubos, jateamento e pintura
             </p>
             <p>
-              <i class="fa fa-cGaleria/heck" aria-hidden="true"></i>
+              <i class="fa fa-check" aria-hidden="true"></i>
               Fabricação, montagem e manutenção industrial
             </p>
             <p>
@@ -145,9 +147,9 @@
               industriais e tubulações
             </p>
 
-
+           
           </div>
-
+          <img src="./img/Galeria/brasil.jpg" alt="">
         </section>
 
 
@@ -247,8 +249,6 @@
 
 
   <div class="container-clientes">
-    <button class="arrow-left control" aria-label="Previous image">◀</button>
-    <button class="arrow-right control" aria-label="Next Image">▶</button>
     <div class="gallery-wrapper">
       <div class="gallery">
         <img src="./img/Clientes/ambiental.png" alt="ambiental" class="item current-item">
