--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <header id="heade">
     <!--container-->
     <div class="container">
-
+     
       <nav>
         <a href="#heder">
           <div class="logo">
@@ -42,19 +42,20 @@
         </ul>
         <span class="open-btn" onclick="openNav()">&#9776;</span>
       </nav>
-
+  
       <section class="banner">
         <div class="banner-text">
-          <h1>WR Locações e Serviços</h1>
+          <h1 >WR Locações e Serviços</h1>
           <p> Trabalhando na busca da satisfação do cliente.</p>
           <a onclick="abrirModal()" class="btn">Entrar em contato</a>
-
+          <h2 id="dia">Boa tarde!</h2>
         </div>
+     
       </section>
     </div>
   </header>
   <!--Sobre-->
-  <div class="triangulo">triangulo</div>
+  <div class="triangulo"></div>
   <section class="faca-mais" id="sobre">
     <!--Container-->
     <div class="container">
