add novos clientes

--- a/index.html
+++ b/index.html
@@ -172,8 +172,18 @@
     <a onclick="abrirModal()" class="btn btnServico">Entrar em contato</a>
 
     <div class="galeria-container">
+      <a href="./img/Galeria/escada.jpg" class="a">
+        <img src="./img/Galeria/escada.jpg" alt="escada" class="galeria-items">
+      </a>
+      <a href="./img/Galeria/stargat.jpeg" class="a">
+        <img src="./img/Galeria/stargat.jpeg" alt="stargat" class="galeria-items">
+      </a>
+      
+      <a href="./img/Galeria/escadaAmarale.jpg" class="a">
+        <img src="./img/Galeria/escadaAmarale.jpg" alt="pessoas" class="galeria-items">
+      </a>
       <a href="./img/Galeria/galeria_1_mini.jpg" class="a">
-        <img src="./img/Galeria/galeria_1_mini.jpg" alt="estrutura" class="galeria-items">
+        <img src="./img/Galeria/galeria_1_mini.jpg" alt="escadaAmarela" class="galeria-items">
       </a>
       <a href="./img/Galeria/estrutura.jpeg" class="a">
         <img src="./img/Galeria/estrutura.jpeg" alt="estrutura" class="galeria-items">
@@ -250,8 +260,10 @@
 
 
   <div class="container-clientes">
-    <div class="gallery-wrapper">
+    <div class="c">
       <div class="gallery">
+        <img src="./img/Clientes/impropel.jpeg" alt="ambiental" class="item current-item">
+        <img src="./img/Clientes/petrosafra.jpeg" alt="ambiental" class="item current-item">
         <img src="./img/Clientes/ambiental.png" alt="ambiental" class="item current-item">
 
         <img src="./img/Clientes/itambe.jpg" alt="itambe" class="item current-item">
@@ -290,7 +302,7 @@
   <a class="btn btnServico" onclick="abrirModal()">Entrar em contato</a>
 
   <!-- Forms -->
-  <dialog>
+  <dialog class="dialog-transition">
 
     <a id="fecharModal"><i class="fa fa-times-circle" aria-hidden="true"></i></a>
 
