add imagem cliente

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
       <nav>
         
         <ul class="ul">
-          <li><a href="#heade" class="smooth-scroll" onclick="closeNav()">Inicio</a></li>
-          <li> <a href="#sobre" class="smooth-scroll" onclick="closeNav()">Sobre</a></li>
-          <li> <a href="#servico" class="smooth-scroll" onclick="closeNav()">Serviços</a></li>
-          <li> <a href="#galeria" class="smooth-scroll" onclick="closeNav()">Galeria</a></li>
-          <li> <a href="#BannerCliente" class="smooth-scroll" onclick="closeNav()">Clientes</a></li>
-          <li> <a href="#contato" class="smooth-scroll" onclick="closeNav()">Contato</a></li>
-          <li> <a href="https://drive.google.com/file/d/1SSn9pc7xBRQx2xffG5tnFmmc-P4mJiNx/view?usp=sharing"
-              class="smooth-scroll" onclick="closeNav()">Portifólio</a></li>
-          <li> <a href="#" id="btnTrabalhe" class="smooth-scroll" onclick="closeNav()">Trabalhe conosco</a></li>
+        <a href="#heade" class="smooth-scroll" onclick="closeNav()">Inicio</a>
+         <a href="#sobre" class="smooth-scroll" onclick="closeNav()">Sobre</a>
+         <a href="#servico" class="smooth-scroll" onclick="closeNav()">Serviços</a>
+         <a href="#galeria" class="smooth-scroll" onclick="closeNav()">Galeria</a>
+         <a href="#BannerCliente" class="smooth-scroll" onclick="closeNav()">Clientes</a>
+         <a href="#contato" class="smooth-scroll" onclick="closeNav()">Contato</a>
+         <a href="https://drive.google.com/file/d/1SSn9pc7xBRQx2xffG5tnFmmc-P4mJiNx/view?usp=sharing"
+              class="smooth-scroll" onclick="closeNav()">Portifólio</a>
+         <a href="#" id="btnTrabalhe" class="smooth-scroll" onclick="closeNav()">Trabalhe conosco</a>
 
 
 
@@ -306,6 +306,8 @@
   <div class="container-clientes">
     <div class="c">
       <div class="gallery">
+        <img src="./img/Clientes/presidente.jpeg" alt="presidente" class="item current-item">
+        <img src="./img/Clientes/lj.jpeg" alt="lj" class="item current-item">
         <img src="./img/Clientes/impropel.jpeg" alt="impropel" class="item current-item">
         <img src="./img/Clientes/petrosafra.jpeg" alt="ambiental" class="item current-item">
         <img src="./img/Clientes/ap-marine.JPG" alt="ambiental" class="item current-item">
@@ -323,7 +325,6 @@
 
         <img src="./img/Clientes/gebana.jpg" alt="gebana" class="item current-item">
         <img src="./img/Clientes/incepa.jpg" alt="incepa" class="item current-item">
-        <img src="./img/Clientes/abbade.PNG" alt="megaproj" class="item current-item">
         <img src="./img/Clientes/megaproj.jpg" alt="megaproj" class="item current-item">
         <img src="./img/Clientes/premotec.PNG" alt="premotec" class="item current-item">
 
