add img cliente

--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
   <header id="heade">
     <!--container-->
     <div class="container">
-      <!-- <div class="logo"></div> -->
       <nav>
         
         <ul class="ul">
-        <a href="#heade" class="smooth-scroll" onclick="closeNav()">Inicio</a>
+        <a href="#heade" class="smooth-scroll" onclick="closeNav()">Início</a>
          <a href="#sobre" class="smooth-scroll" onclick="closeNav()">Sobre</a>
          <a href="#servico" class="smooth-scroll" onclick="closeNav()">Serviços</a>
          <a href="#galeria" class="smooth-scroll" onclick="closeNav()">Galeria</a>
