--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="icon" href="./img/LogoFundo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
     integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./style/style.css">
   <link rel="stylesheet" media="screen and (max-width:800px)" href="./responsivo.css">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+  
 
-  <link rel="icon" href="./img/fundo.png">
   <div class="gtranslate_wrapper"></div>
   <script>window.gtranslateSettings = { "default_language": "pt", "languages": ["pt", "es", "en"], "wrapper_selector": ".gtranslate_wrapper", "alt_flags": { "en": "usa", "pt": "brazil", "es": "mexico" } }</script>
   <script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
