--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
          <a href="#galeria" class="smooth-scroll" onclick="closeNav()">Galeria</a>
          <a href="#BannerCliente" class="smooth-scroll" onclick="closeNav()">Clientes</a>
          <a href="#contato" class="smooth-scroll" onclick="closeNav()">Contato</a>
-         <a href="https://drive.google.com/file/d/1SSn9pc7xBRQx2xffG5tnFmmc-P4mJiNx/view?usp=sharing"
-              class="smooth-scroll" onclick="closeNav()">Portifólio</a>
+         <a href="https://servicos-wr.vercel.app/index.html" class="smooth-scroll" onclick="closeNav()" target="_blank">Funcionários</a>
+         <a href="https://drive.google.com/drive/folders/1jR5F-NeQUYcdvGWUEAVhBslkxh_oVJqg?usp=sharing"
+              class="smooth-scroll" onclick="closeNav()" target="_blank">Portifólio</a>
          <a href="#" id="btnTrabalhe" class="smooth-scroll" onclick="closeNav()">Trabalhe conosco</a>
 
 
